# design

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs  plan.md
.claude/: CLAUDE.md
.github/workflows/: release.yml
design/: AGENTS.md  build.mjs  dtcg.js  package.json
design/components/: ds-badge.js  ds-button.js  ds-card.js  ds-device.js  ds-field.js  ds-message.js  ds-specimen.js  ds-status.js  ds-swatch.js  ds-switch.js  ds-tab.js  index.js
design/preview/: index.html  layout.html
design/src/: layout.css  layout.js  main.js  styles.css  theme.js  tokens.css  tokens.json  tokens.light.json
example/: AGENTS.md  build.mjs  dtcg.js  index.html  package-lock.json  package.json  vite.config.js
example/components/: ds-accordion.js  ds-alert.js  ds-avatar.js  ds-badge.js  ds-breadcrumb.js  ds-button.js  ds-card.js  ds-checkbox.js  ds-footer.js  ds-hero.js  ds-input.js  ds-list.js  ds-modal.js  ds-navbar.js  ds-pricing.js  ds-radio.js  ds-select.js  ds-sidebar.js  ds-stat.js  ds-table.js  ds-tabs.js  ds-testimonial.js  ds-textarea.js  ds-toast.js  ds-toggle.js  ds-tooltip.js  index.js
example/conventions/: components.md  tokens.md
example/preview/: components.html  index.html  layout.html
example/src/: Page.jsx  components.jsx  gallery.js  layout.js  main.js  main.jsx  mock.js  styles.css  tokens.json
src/: agent.rs  console.rs  embed.rs  lib.rs  mcp.rs  server.rs  version.rs
src/core/: mod.rs  tokens.rs
src/prompts/: design_system_prompt.md
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.vue  Chat.vue  (+9 more)
(+1 files in other folders)
