[package]
name = "design"
version = "2026.6.10"
edition = "2021"
description = "Locally-run CLI that drives a code agent against a git-controlled, agent-neutral design-system repo"
license = "MIT"

[lib]
name = "design"
path = "src/lib.rs"

[[bin]]
name = "design"
path = "src/bin/design.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Phase 1 — CLI + localhost server
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "fs", "process", "sync", "io-util", "time"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
rust-embed = "8"
mime_guess = "2"
uuid = { version = "1", features = ["v4"] }

# Phase 2 — agent session manager (WebSocket relay to spawned agents)
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
